[package]
name = "iot_framework"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rumqttc = "0.23"
# Simulated sensor
rand = "0.8"
tokio = { version = "1.47.1", features = ["full"] }

# Para DHT11/DHT22 multiplataforma
dht-embedded = "0.4"
gpio-cdev = "0.5"
linux-embedded-hal = "0.3"

# Errores y (si ya lo usas) serde/toml
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"