[package]
name = "lince"
version = "0.1.0"
edition = "2021"

# --------- LIBRARY ---------
[lib]
name = "lince"
path = "src/lib.rs"

# --------- BINARIO (ejecutable principal) ---------
[[bin]]
name = "lince"
path = "src/main.rs"

# --------- DEPENDENCIAS GLOBALES ---------
[dependencies]
# Configuración y serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
spin_sleep = "1.1" 

# Hardware y sensores
rppal = "0.14"
embedded-hal = "0.2.7"

# Comunicación y concurrencia
rumqttc = "0.23"
tokio = { version = "1.47.1", features = ["full"] }

# Utilidades
rand = "0.8"
thiserror = "1.0"

# --------- DEPENDENCIAS ESPECÍFICAS PARA LINUX ---------
[target.'cfg(target_os = "linux")'.dependencies]
gpio-cdev = "0.5"
linux-embedded-hal = "0.3"
